--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,53 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  font-family: "IBM Plex mono", "Times New Roman", "Arial";
+  margin: 0;
+  font-size: 18px;
+  padding: 0 10px 0;
+  background-color: #000028;
+}
+
+.header__theme-menu {
+  display: flex;
+  justify-content: end;
+}
+
+.header__theme-menu-list {
+  list-style-type: none;
+}
+
+.header__theme-menu-button {
+  font-family: "IBM Plex mono", "Times New Roman", "Arial";
+  text-transform: lowercase;
+  color: var(--accent-color);
+  border: none;
+  background-color: inherit;
+  font-size: var(--font-size);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent-color);
+}
+
+.header {
+  background-image: url(./images/cover-image-light.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.header__title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+  color: var(--header__title-color);
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.text_h2 {
+  color: var(--text_h2-color);
+  background-color: var(--accent-color);
+  font-size: var(--font-size);
+  line-height: var(--line-height);
+  font-weight: bold;
 }
