--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,9 +3,10 @@
   и их переопределение под различные устройства
 */
 :root {
+  --color: #f1b2ce;
   --accent-color: #ff0070;
   --header__title-color: #db00ff;
-  --text_h2-color: #000028;
+  --content__title: #000028;
   --font-size: 18px;
   /* --line-height: 23.4; */
 }
