--- a/styles/style.css
+++ b/styles/style.css
@@ -15,12 +15,26 @@
   background-image: url("../images/cover-image.png");
 }
 
+@media (min-width: 768px) {
+  .page {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    padding: 0 20px 0;
+  }
+}
+
 .rec-label {
   color: var(--accent-color);
   position: absolute;
   top: 10px;
   right: 9px;
   display: inline-block;
+}
+
+@media (min-width: 768px) {
+  .rec-label {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    top: 20px;
+  }
 }
 
 .rec-label::after {
@@ -40,6 +54,13 @@
   justify-content: end;
   align-items: center;
   padding-top: 10px;
+}
+
+@media (min-width: 768px) {
+  .header__theme-menu {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    padding-top: 20px;
+  }
 }
 
 .header__theme-menu-list {
@@ -74,6 +95,13 @@
   grid-template-rows: 1fr minmax(min-content, max-content) 1fr;
 }
 
+@media (min-width: 768px) {
+  .header {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    margin-bottom: 60px;
+  }
+}
+
 .header::before {
   content: "";
   position: absolute;
@@ -83,6 +111,13 @@
   height: 24px;
   border-top: 1px solid var(--accent-color); /* Верхняя граница */
   border-right: 1px solid var(--accent-color); /* Правая граница */
+}
+
+@media (min-width: 768px) {
+  .header::before {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    top: 20px;
+  }
 }
 
 .header::after {
@@ -96,9 +131,17 @@
   border-bottom: 1px solid var(--accent-color); /* Нижняя граница */
 }
 
+@media (min-width: 768px) {
+  .header::after {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    bottom: 20px;
+  }
+}
+
 .heading {
   font-size: var(--font-size);
   font-weight: bold;
+  margin-top: 0px;
 }
 
 .header__title {
@@ -111,12 +154,26 @@
   text-shadow: 4px 4px 0 var(--accent-color);
 }
 
+@media (min-width: 768px) {
+  .header__title {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    margin-left: -20px;
+  }
+}
+
 .header__paragraph {
   padding-bottom: 10px;
   display: flex;
   justify-content: end;
   align-items: center;
   margin: 0;
+}
+
+@media (min-width: 768px) {
+  .header__paragraph {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    padding-bottom: 20px;
+  }
 }
 
 .title-decor {
@@ -131,9 +188,14 @@
   margin-bottom: 0;
 }
 
+@media (min-width: 768px) {
+  .concentration .section-name {
+    width: calc(1 / 3 * 100% - 20px);
+  }
+}
+
 .five-rules {
   font-weight: 400;
-  margin-top: 20px;
 }
 
 .header .title-decor {
@@ -145,29 +207,123 @@
   margin-bottom: 20px;
 }
 
+.section-main {
+  display: grid;
+  gap: 20px;
+}
+
 .section-text {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin: 0;
+}
+
+.section-paragraph {
+  display: grid;
+  gap: 10px;
 }
 
 .section {
   margin-bottom: 50px;
 }
 
+@media (min-width: 768px) {
+  .focused {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    margin-bottom: 80px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .concentration {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    margin-bottom: 80px;
+    /* display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px; */
+  }
+}
+
+@media (min-width: 768px) {
+  .gold__fish {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    margin-bottom: 80px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+  }
+}
+
 .gallery {
   margin-top: 10px;
   display: grid;
-  grid-template-rows: auto;
   gap: 10px;
+}
+
+@media (min-width: 768px) {
+  .gallery {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    /* margin-bottom: 80px; */
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 20px;
+  }
+  .item1 {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 1;
+  }
+
+  .item2 {
+    grid-column: 3 / span 1;
+    grid-row: 1 / span 2;
+  }
+
+  .item3 {
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 2;
+  }
+
+  .item4 {
+    grid-column: 2 / span 1;
+    grid-row: 2 / span 1;
+  }
+
+  .item5 {
+    grid-column: 2 / span 2;
+    grid-row: 3 / span 1;
+  }
 }
 
 .in-pictures {
   margin-bottom: 40px;
 }
 
-.images {
+@media (min-width: 768px) {
+  .in-pictures {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    margin-bottom: 60px;
+  }
+}
+
+.images img {
   width: 100%;
-  height: auto;
+  height: 100%;
+
+  object-fit: cover;
+  vertical-align: middle;
+}
+
+.footer__title {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+  color: var(--header__title-color);
+  text-shadow: 4px 4px 0 var(--accent-color);
 }
 
 .footer {
@@ -190,6 +346,13 @@
   border-right: 1px solid var(--accent-color); /* Правая граница */
 }
 
+@media (min-width: 768px) {
+  .footer::before {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    top: 20px;
+  }
+}
+
 .footer::after {
   content: "";
   position: absolute;
@@ -199,4 +362,11 @@
   height: 24px;
   border-left: 1px solid var(--accent-color); /* Левая граница */
   border-bottom: 1px solid var(--accent-color); /* Нижняя граница */
+}
+
+@media (min-width: 768px) {
+  .footer::after {
+    /* Стили карточки при ширине окна просмотра >= 768px */
+    bottom: 20px;
+  }
 }
