--- a/styles/light.css
+++ b/styles/light.css
@@ -9,5 +9,32 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  background-image: url("../images/cover-image-light.png");
+  --color: #353430;
+  --accent-color: #ff8dcb;
+  --header-hover: rgba(50, 49, 45, 0.4);
+  --text-shadow: #ff0070;
+  --link-shadow: #ff8dcb;
+  --header__main-color: #353430;
+  --header__title-color: #ffc2e6;
+  --content__title: #353430;
+  --font-size: 18px;
+  --bc-image: url("../images/cover-image-light.png");
+  --rec: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    /* Дублируем переменные светлой темы */
+    --color: #353430;
+    --accent-color: #ff8dcb;
+    --header-hover: rgba(50, 49, 45, 0.4);
+    --text-shadow: #ff0070;
+    --link-shadow: #ff8dcb;
+    --header__main-color: #353430;
+    --header__title-color: #ffc2e6;
+    --content__title: #353430;
+    --font-size: 18px;
+    --bc-image: url("../images/cover-image-light.png");
+    --rec: none;
+  }
 }
