--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,11 +2,10 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
-:root {
+/* :root {
   --color: #f1b2ce;
   --accent-color: #ff0070;
   --header__title-color: #db00ff;
   --content__title: #000028;
   --font-size: 18px;
-  /* --line-height: 23.4; */
-}
+} */
