--- a/styles/dark.css
+++ b/styles/dark.css
@@ -18,6 +18,7 @@
   --header__title-color: #db00ff;
   --content__title: #000028;
   --font-size: 18px;
+  --bc-color: #000028;
   --bc-image: url("../images/cover-image-dark.png");
   --rec: inline-block;
 }
@@ -34,6 +35,7 @@
     --header__title-color: #db00ff;
     --content__title: #000028;
     --font-size: 18px;
+    --bc-color: #000028;
     --bc-image: url("../images/cover-image-dark.png");
     --rec: inline-block;
   }
