--- a/styles/light.css
+++ b/styles/light.css
@@ -18,6 +18,7 @@
   --header__title-color: #ffc2e6;
   --content__title: #353430;
   --font-size: 18px;
+  --bc-color: #fff1f7;
   --bc-image: url("../images/cover-image-light.png");
   --rec: none;
 }
@@ -34,6 +35,7 @@
     --header__title-color: #ffc2e6;
     --content__title: #353430;
     --font-size: 18px;
+    --bc-color: #fff1f7;
     --bc-image: url("../images/cover-image-light.png");
     --rec: none;
   }
