--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,9 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   font-family: "IBM Plex mono", "Times New Roman", "Arial";
-  font-size: 18px;
-  line-height: 23.4px;
-  color: var(--color);
+  font-size: var(--font-size);
+  line-height: var(--ln-height);
+  color: var(--color, #000);
   background-position: center;
   background-size: cover;
   background-attachment: fixed; /* Фон остается на месте при прокрутке */
@@ -33,8 +33,8 @@
 .rec-label::after {
   content: "";
   display: inline-block;
-  width: 9px;
-  height: 9px;
+  width: 8px;
+  height: 8px;
   background-color: var(--accent-color); /* Цвет точки */
   border-radius: 50%; /* Круглая форма */
   margin-left: 10px; /* Отступ между текстом и точкой */
@@ -82,7 +82,7 @@
 
 .header__theme-menu-button {
   padding: 0;
-  width: 70px;
+  min-width: 70px;
   font-family: "IBM Plex mono", "Times New Roman", "Arial";
   text-transform: lowercase;
   color: var(--header__main-color);
@@ -102,7 +102,7 @@
 
 .header__theme-menu-button:focus-visible {
   padding: 0;
-  box-shadow: 0 1px 0 0 var(--color);
+  box-shadow: 0 1px 0 0 var(--header__main-color);
 }
 
 .header__theme-menu-button_active {
@@ -139,38 +139,38 @@
   }
 }
 
-.header::before {
+.decorated-zone::before,
+.decorated-zone::after {
   content: "";
   position: absolute;
+  width: 24px;
+  height: 24px;
+}
+
+.decorated-zone::before {
   top: 10px;
   right: 10px;
-  width: 24px; /* Длина границы */
-  height: 24px;
   border-top: 1px solid var(--header__main-color); /* Верхняя граница */
   border-right: 1px solid var(--header__main-color); /* Правая граница */
 }
 
 @media (min-width: 768px) {
-  .header::before {
+  .decorated-zone::before {
     /* Стили карточки при ширине окна просмотра >= 768px */
     top: 20px;
     right: 20px;
   }
 }
 
-.header::after {
-  content: "";
-  position: absolute;
+.decorated-zone::after {
   bottom: 10px;
   left: 10px;
-  width: 24px; /* Длина границы */
-  height: 24px;
   border-left: 1px solid var(--header__main-color); /* Левая граница */
   border-bottom: 1px solid var(--header__main-color); /* Нижняя граница */
 }
 
 @media (min-width: 768px) {
-  .header::after {
+  .decorated-zone::after {
     /* Стили карточки при ширине окна просмотра >= 768px */
     bottom: 20px;
     left: 20px;
@@ -183,21 +183,28 @@
   margin: 0px;
 }
 
-.header__title {
+.title {
   margin: 0;
   display: flex;
   align-items: center;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 82.5%;
   color: var(--header__title-color);
+}
+
+@media (min-width: 768px) {
+  .title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
+
+.header__title {
   text-shadow: 4px 4px 0 var(--text-shadow);
 }
 
 @media (min-width: 768px) {
   .header__title {
-    /* Стили карточки при ширине окна просмотра >= 768px */
     margin-left: -20px;
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
 
@@ -248,19 +255,6 @@
   margin-bottom: 0;
 }
 
-@media (min-width: 768px) {
-  .concentration .section-name {
-    width: calc(1 / 3 * 100% - 20px);
-  }
-}
-
-@media (min-width: 1024px) {
-  .concentration .section-main {
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: start;
-  }
-}
-
 .five-rules {
   font-weight: 400;
 }
@@ -268,6 +262,12 @@
 .section__title {
   color: var(--header__main-color);
   margin-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+  .section__title {
+    margin-bottom: 0;
+  }
 }
 
 .section-main {
@@ -293,33 +293,62 @@
 @media (min-width: 768px) {
   .section {
     /* Стили карточки при ширине окна просмотра >= 768px */
-    padding: 0 20px 0;
-  }
-}
-
-@media (min-width: 768px) {
-  .focused {
-    /* Стили карточки при ширине окна просмотра >= 768px */
     margin-bottom: 80px;
+    padding: 0 20px 0;
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 20px;
   }
 }
 
-@media (min-width: 768px) {
-  .concentration {
-    /* Стили карточки при ширине окна просмотра >= 768px */
-    margin-bottom: 80px;
+@media (min-width: 1024px) {
+  .section {
+    /* Стили карточки при ширине окна просмотра >= 1024px */
+    gap: 10px;
   }
 }
 
 @media (min-width: 768px) {
-  .gold__fish {
+  .concentration {
+    grid-template-columns: none;
+    grid-template-rows: auto;
+  }
+}
+
+@media (min-width: 768px) {
+  .concentration .section__title {
+    width: calc(1 / 3 * 100% - 20px);
+  }
+}
+
+@media (min-width: 1024px) {
+  .concentration {
+    gap: 20px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .concentration .section-main {
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: start;
+  }
+}
+
+.in-pictures {
+  margin-bottom: 40px;
+}
+
+@media (min-width: 768px) {
+  .in-pictures {
     /* Стили карточки при ширине окна просмотра >= 768px */
-    margin-bottom: 80px;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+    margin-bottom: 60px;
+    grid-template-columns: none;
+    grid-template-rows: auto;
+  }
+}
+
+@media (min-width: 1024px) {
+  .in-pictures {
     gap: 20px;
   }
 }
@@ -333,9 +362,7 @@
 @media (min-width: 768px) {
   .gallery {
     /* Стили карточки при ширине окна просмотра >= 768px */
-
-    margin-top: 20px;
-    display: grid;
+    margin-top: 0;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
     gap: 20px;
@@ -366,40 +393,12 @@
   }
 }
 
-.in-pictures {
-  margin-bottom: 40px;
-}
-
-@media (min-width: 768px) {
-  .in-pictures {
-    /* Стили карточки при ширине окна просмотра >= 768px */
-    margin-bottom: 60px;
-  }
-}
-
 .images img {
   width: 100%;
   height: 100%;
 
   object-fit: cover;
   vertical-align: middle;
-}
-
-.footer__title {
-  margin: 0;
-  display: flex;
-  align-items: center;
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  line-height: 82.5%;
-  color: var(--header__title-color);
-  text-shadow: 3px 3px 0 var(--text-shadow);
-}
-
-@media (min-width: 768px) {
-  .footer__title {
-    /* Стили карточки при ширине окна просмотра >= 768px */
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  }
 }
 
 .footer {
@@ -412,40 +411,6 @@
   align-items: center;
 }
 
-.footer::before {
-  content: "";
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 24px; /* Длина границы */
-  height: 24px;
-  border-top: 1px solid var(--header__main-color); /* Верхняя граница */
-  border-right: 1px solid var(--header__main-color); /* Правая граница */
-}
-
-@media (min-width: 768px) {
-  .footer::before {
-    /* Стили карточки при ширине окна просмотра >= 768px */
-    top: 20px;
-    right: 20px;
-  }
-}
-
-.footer::after {
-  content: "";
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  width: 24px; /* Длина границы */
-  height: 24px;
-  border-left: 1px solid var(--header__main-color); /* Левая граница */
-  border-bottom: 1px solid var(--header__main-color); /* Нижняя граница */
-}
-
-@media (min-width: 768px) {
-  .footer::after {
-    /* Стили карточки при ширине окна просмотра >= 768px */
-    bottom: 20px;
-    left: 20px;
-  }
+.footer__title {
+  text-shadow: 3px 3px 0 var(--text-shadow);
 }
